--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "papa-node-hello-000",
-  "version": "1.0.0",
+  "name": "@mytestgroupdeqode1/node-hello-000",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnpapa/node-hello.git"
+    "url": "git+https://gitlab.com/mytestgroupdeqode/verdaccio-gitlab.git"
   },
   "keywords": [],
   "author": "",
